--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-blog",
   "version": "0.1.0",
-  "homepage": "https://susanoos.github.io/chisme",
+  "homepage": "https://susanoos.github.io/chisme/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
